// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<LoginPage> should match the snapshot 1`] = `
<DocumentFragment>
  <div
    class="mock-page"
  >
    <h1>
      Log In
    </h1>
    <form
      action="#"
      class="w-full lg:w-1/2 relative"
    >
      <div
        class=""
      >
        <div
          class="form-field"
        >
          <label
            class="form-label"
            for="username"
          >
            Username
          </label>
          <input
            class="form-input"
            id="username"
            name="username"
            type="text"
            value=""
          />
        </div>
        <div
          class="form-field"
        >
          <label
            class="form-label"
            for="password"
          >
            Password
          </label>
          <input
            class="form-input"
            id="password"
            name="password"
            type="password"
            value=""
          />
        </div>
      </div>
      <div
        class="gap-3 sm:grid sm:grid-cols-1 lg:grid-cols-2"
      >
        <button
          class="form-button"
          type="submit"
        >
          Log In
        </button>
      </div>
    </form>
  </div>
</DocumentFragment>
`;

exports[`<LoginPage> when the request is loading should match the snapshot 1`] = `
<DocumentFragment>
  <div
    class="mock-page"
  >
    <h1>
      Log In
    </h1>
    <form
      action="#"
      class="w-full lg:w-1/2 relative"
    >
      <div
        class="form-loading-overlay absolute grid h-full place-content-center w-full"
      >
        <div
          class="inline-block text-center"
        >
          <svg
            aria-hidden="true"
            class="svg-inline--fa fa-user animate-bounce motion-reduce:animate-none h-10 w-10"
            data-icon="user"
            data-prefix="fas"
            focusable="false"
            role="img"
            viewBox="0 0 448 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M224 256A128 128 0 1 0 224 0a128 128 0 1 0 0 256zm-45.7 48C79.8 304 0 383.8 0 482.3C0 498.7 13.3 512 29.7 512H418.3c16.4 0 29.7-13.3 29.7-29.7C448 383.8 368.2 304 269.7 304H178.3z"
              fill="currentColor"
            />
          </svg>
          <br />
          Logging In...
        </div>
      </div>
      <div
        class=""
      >
        <div
          class="form-field"
        >
          <label
            class="form-label"
            for="username"
          >
            Username
          </label>
          <input
            class="form-input"
            id="username"
            name="username"
            type="text"
            value=""
          />
        </div>
        <div
          class="form-field"
        >
          <label
            class="form-label"
            for="password"
          >
            Password
          </label>
          <input
            class="form-input"
            id="password"
            name="password"
            type="password"
            value=""
          />
        </div>
      </div>
      <div
        class="gap-3 sm:grid sm:grid-cols-1 lg:grid-cols-2"
      >
        <button
          class="form-button"
          type="submit"
        >
          Log In
        </button>
      </div>
    </form>
  </div>
</DocumentFragment>
`;

exports[`<LoginPage> when the request returns a failure response should match the snapshot 1`] = `
<DocumentFragment>
  <div
    class="mock-page"
  >
    <h1>
      Log In
    </h1>
    <form
      action="#"
      class="w-full lg:w-1/2 relative"
    >
      <div
        class=""
      >
        <div
          class="form-field"
        >
          <label
            class="form-label"
            for="username"
          >
            Username
          </label>
          <input
            class="form-input"
            id="username"
            name="username"
            type="text"
            value=""
          />
        </div>
        <div
          class="form-field"
        >
          <label
            class="form-label"
            for="password"
          >
            Password
          </label>
          <input
            class="form-input"
            id="password"
            name="password"
            type="password"
            value=""
          />
        </div>
      </div>
      <div
        class="gap-3 sm:grid sm:grid-cols-1 lg:grid-cols-2"
      >
        <button
          class="form-button"
          type="submit"
        >
          Log In
        </button>
      </div>
    </form>
  </div>
</DocumentFragment>
`;

exports[`<LoginPage> when the request returns a successful response should match the snapshot 1`] = `
<DocumentFragment>
  <div
    class="mock-page"
  >
    <h1>
      Log In
    </h1>
    <form
      action="#"
      class="w-full lg:w-1/2 relative"
    >
      <div
        class=""
      >
        <div
          class="form-field"
        >
          <label
            class="form-label"
            for="username"
          >
            Username
          </label>
          <input
            class="form-input"
            id="username"
            name="username"
            type="text"
            value=""
          />
        </div>
        <div
          class="form-field"
        >
          <label
            class="form-label"
            for="password"
          >
            Password
          </label>
          <input
            class="form-input"
            id="password"
            name="password"
            type="password"
            value=""
          />
        </div>
      </div>
      <div
        class="gap-3 sm:grid sm:grid-cols-1 lg:grid-cols-2"
      >
        <button
          class="form-button"
          type="submit"
        >
          Log In
        </button>
      </div>
    </form>
  </div>
</DocumentFragment>
`;
